--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 <body>
     <ons-page>
         <ons-toolbar>
-            <div class="center toolbar">PlearnHub
+            <div class="center toolbar">
+                PlearnHub
             </div>
         </ons-toolbar>
         <ons-tabbar swipeable position="auto">
-            <ons-tab page="pages/home.html" label="home" icon="md-home, material:md-home" active>
+            <ons-tab page="pages/home.html" label="Home" icon="md-home, material:md-home" active>
             </ons-tab>
-            <ons-tab page="pages/fav.html" label="fav" icon="md-star" active-icon="md-star">
+            <ons-tab page="pages/fav.html" label="Fav" icon="md-star" active-icon="md-star">
             </ons-tab>
-            <ons-tab page="pages/profile.html" label="profile" icon="md-account" active-icon="md-account">
+            <ons-tab page="pages/profile.html" label="Profile" icon="md-account" active-icon="md-account">
             </ons-tab>
-            <ons-tab page="pages/search.html" label="search" icon="md-search" active-icon="md-search">
+            <ons-tab page="pages/search.html" label="Search" icon="md-search" active-icon="md-search">
             </ons-tab>
         </ons-tabbar>
     </ons-page>
