--- a/pages/home.html
+++ b/pages/home.html
@@ -1,18 +1,18 @@
 <ons-page class="carousel">
   <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel">
-    <ons-carousel-item style="background-color: #085078;">
-      <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-        BLUE
+    <ons-carousel-item style="background-color: rgb(37, 36, 36);">
+      <div>
+        <img src="img/Homura.png" width="100%" height="100%">
       </div>
     </ons-carousel-item>
-    <ons-carousel-item style="background-color: #373B44;">
-      <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-        DARK
+    <ons-carousel-item style="background-color: pink;">
+      <div>
+        <img src="img/Madoka.png" width="100%" height="100%">
       </div>
     </ons-carousel-item>
     <ons-carousel-item style="background-color: #D38312;">
-      <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-        ORANGE
+      <div>
+        <img src="img/Mami.png" width="100%" height="100%">
       </div>
     </ons-carousel-item>
   </ons-carousel>
