--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ons-page>
         <ons-toolbar>
             <div class="center toolbar">
-                PlearnHub
+                PlearnBook
             </div>
         </ons-toolbar>
         <ons-tabbar swipeable position="auto">
