--- a/pages/home.html
+++ b/pages/home.html
@@ -1,16 +1,19 @@
 <ons-page class="carousel">
   <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel">
-    <ons-carousel-item style="background-color: rgb(37, 36, 36);">
+    <ons-carousel-item>
       <div>
-        <img src="img/Homura.png" width="100%" height="100%">
+        <img src="img/DAL_v15_Cover.jpg" width="100%" height="100%">
+      </div>
+      <div>
+        Date a live
       </div>
     </ons-carousel-item>
-    <ons-carousel-item style="background-color: pink;">
+    <ons-carousel-item>
       <div>
-        <img src="img/Madoka.png" width="100%" height="100%">
+        <img src="img/Konosuba_v16_Cover.jpg" width="100%" height="100%">
       </div>
     </ons-carousel-item>
-    <ons-carousel-item style="background-color: #D38312;">
+    <ons-carousel-item>
       <div>
         <img src="img/Mami.png" width="100%" height="100%">
       </div>
