--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,8 @@
-<ons-page class="carousel">
+
+<ons-page class="carousel" id="Tab1">
+  <div class="topic">
+    <h1>New release!!</h1>
+  </div>
   <div style="text-align:center">
     <span class="dot"></span>
     <span class="dot"></span>
@@ -33,7 +37,8 @@
       </div>
     </ons-carousel-item>
   </ons-carousel>
-  <script>
+  
+  <!-- <script>
       var slideIndex = 0;
       showSlides();
 
@@ -52,5 +57,5 @@
       slides[slideIndex - 1].style.display = "block";
       dots[slideIndex - 1].className += " actived";
       setTimeout(showSlides, 2000); // Change image every 2 seconds
-    }</script>
+    }</script> -->
 </ons-page>
