--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/app.css">
     <script src="/onsenui/js/onsenui.min.js"></script>
     <script src="/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/js/autoswipe.js"></script>
     <script src="/js/app.js"></script>
 </head>
 
