--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,6 @@
-
 <ons-page class="carousel" id="Tab1">
   <div class="topic">
-    <h1>New release!!</h1>
+    New release!!
   </div>
   <div style="text-align:center">
     <span class="dot"></span>
@@ -37,25 +36,4 @@
       </div>
     </ons-carousel-item>
   </ons-carousel>
-  
-  <!-- <script>
-      var slideIndex = 0;
-      showSlides();
-
-    function showSlides() {
-      var i;
-      var slides = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("dot");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) { slideIndex = 1 }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" actived", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " actived";
-      setTimeout(showSlides, 2000); // Change image every 2 seconds
-    }</script> -->
 </ons-page>
