make searching page
made searching page

--- a/pages/fav.html
+++ b/pages/fav.html
@@ -1,5 +1,5 @@
 <ons-page id="Tab2">
-    <p style="text-align: center;">
-      This is the second page.
-    </p>
+    <div class="container">
+        
+    </div>
   </ons-page>
