--- a/pages/home.html
+++ b/pages/home.html
@@ -11,29 +11,29 @@
   </div>
   <ons-carousel fullscreen auto-scroll overscrollable id="carousel">
     <ons-carousel-item class="mySlides fade">
-      <div>
+      <div class="img">
         <img src="img/DAL_v15_Cover.jpg" width="100%" height="100%">
       </div>
     </ons-carousel-item>
     <ons-carousel-item class="mySlides fade">
-      <div>
+      <div class="img">
         <img src="img/Konosuba_v16_Cover.jpg" width="100%" height="100%">
       </div>
     </ons-carousel-item>
     <ons-carousel-item class="mySlides fade">
-      <div>
+      <div class="img">
         <img src="img/crote_v10_Cover.jpg" width="100%" height="100%">
       </div>
     </ons-carousel-item>
     <ons-carousel-item class="mySlides fade">
-      <div>
+      <div class="img">
         <img src="img/RokuakuCover10.jpg" width="100%" height="100%">
       </div>
     </ons-carousel-item>
     <ons-carousel-item class="mySlides fade">
-      <div>
+      <div class="img">
         <img src="img/MaoGakuenCover7.jpg" width="100%" height="100%">
       </div>
-    </ons-carousel-item>
+    </ons-carousel-item>    
   </ons-carousel>
 </ons-page>
