--- a/pages/search.html
+++ b/pages/search.html
@@ -1,5 +1,38 @@
-<ons-page id="Tab4">
-    <p style="text-align: center;">
-      This is the second page.
-    </p>
-  </ons-page>
+<ons-page>
+  <p style="text-align: center; margin-top: 10px;">
+    <ons-search-input
+      placeholder="Search"
+      onchange="ons.notification.alert('Searched for: ' + this.value)"
+    ></ons-search-input>
+  </p> 
+<ons-row class="line">
+  <ons-col class="book">
+    <img src="img/DAL_v15_Cover.jpg"  alt="Date a live volumn:15" width="65%" height="100%"  >
+  </ons-col>
+  <ons-col class="content">Date A Live Volumn:15</ons-col>
+</ons-row>
+<ons-row class="line">
+  <ons-col class="book">
+    <img src="img/Konosuba_v16_Cover.jpg"  alt="Konasuba volumn:16" width="65%" height="100%"  >
+  </ons-col>
+  <ons-col class="content">Konosuba Volumn:16</ons-col>
+</ons-row>
+<ons-row class="line">
+  <ons-col class="book">
+    <img src="img/crote_v10_Cover.jpg"  alt="Classroom of the Elite volumn:10" width="65%" height="100%"  >
+  </ons-col>
+  <ons-col class="content">Classroom of the Elite Volumn:10</ons-col>
+</ons-row>
+<ons-row class="line">
+  <ons-col class="book">
+    <img src="img/RokuakuCover10.jpg"  alt="Rokuaku volumn:16" width="65%" height="100%"  >
+  </ons-col>
+  <ons-col class="content">Rokuaku Volumn:16</ons-col>
+</ons-row>
+<ons-row class="line">
+  <ons-col class="book">
+    <img src="img/MaoGakuenCover7.jpg"  alt="Mao Gakuen volumn:7" width="65%" height="100%"  >
+  </ons-col>
+  <ons-col class="content">Mao Gakuen Volumn:7</ons-col>
+</ons-row>
+</ons-page>
