--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,5 +1,51 @@
 <ons-page id="Tab3">
-    <p style="text-align: center;">
-      This is the second page.
-    </p>
-  </ons-page>
+  <div class="container" style="justify-content: space-around;">
+      <div>
+        <img class="profile_pic" src="img/tenka.jpg" alt="Profile Picture" width="75px" height="75px">
+      </div>
+      <div style="align-items: center; padding-top: 30px; padding-right: 10px;">
+        <div class="name">Nattatat Tantakan</div>
+        <div class="major">Tenka@yatogami.com</div>
+      </div>
+  </div>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Information
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      My Book
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Location:Japan
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Language:English
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Help
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Feedback
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Setting
+    </ons-col>
+  </ons-row>
+  <ons-row class="menu_box">
+    <ons-col class="menu">
+      Log out
+    </ons-col>
+  </ons-row>
+</ons-page>
